--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node dist/index.js",
     "build": "gulp scripts"
   },
   "repository": {
@@ -19,8 +20,19 @@
   },
   "homepage": "https://github.com/santos22/coffee-rest#readme",
   "devDependencies": {
+    "@types/body-parser": "^1.16.8",
+    "@types/debug": "0.0.30",
+    "@types/express": "^4.11.1",
+    "@types/morgan": "^1.7.35",
+    "@types/node": "^9.6.1",
     "gulp": "^3.9.1",
     "gulp-typescript": "^4.0.2",
     "typescript": "^2.8.1"
+  },
+  "dependencies": {
+    "body-parser": "^1.18.2",
+    "debug": "^3.1.0",
+    "express": "^4.16.3",
+    "morgan": "^1.9.0"
   }
 }
