--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/santos22/coffee-rest#readme",
   "devDependencies": {
+    "@google/maps": "^0.4.5",
     "@types/body-parser": "^1.16.8",
     "@types/debug": "0.0.30",
     "@types/express": "^4.11.1",
